todoapp-fastapi-react/k8s/taskapp/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: taskapp
  labels:
    app: mongo
    release: primary
spec:
  selector:
    matchLabels:
      app: mongo
      release: primary
  template:
    metadata:
      labels:
        app: mongo
        release: primary
    spec:
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: storage
              mountPath: /data/db
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: mongo

---

apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: taskapp
  labels:
    app: mongo
    release: primary
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo
    release: primary
