todoapp-fastapi-react/k8s/taskapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskapp
  namespace: taskapp
  labels:
    name: taskapp
spec:
  ingressClassName: nginx
  rules:
  - host: taskapp.acme.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: taskapp-frontend
            port: 
              number: 80
  - host: api.taskapp.acme.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: taskapp
            port: 
              number: 8000

---

apiVersion: v1
kind: Service
metadata:
  namespace: taskapp
  name: taskapp-frontend
spec:
  selector:
    app: taskapp-frontend
  ports:
    - name: taskapp-frontend
      port: 80
      targetPort: 3000
      #nodePort: 31000
  type: LoadBalancer
  # type: NodePort Service bekommt aus Node-IP + random Port zugewiesen (zwischen 30 und 35000 oder so)
  # type: ClusterIP Service bekommt IP aus Cluster-IP Range zugewiesen 

---

apiVersion: v1
kind: Service
metadata:
  namespace: taskapp
  name: taskapp
  labels:
    app: taskapp
spec:
  selector:
    app: taskapp
  ports:
    - name: taskapp
      port: 8000
      targetPort: 8000
  type: ClusterIP
